add a class to support when click the main_page's button to jump to the breakfast_page or dinner or lunch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".BreakButton" />
+        <activity android:name=".LunchButton" />
+        <activity android:name=".DinnerButton" />
 
     </application>
 
